<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BaseColor">


    <ImageView style="@style/Header"
        android:contentDescription="@string/header" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/movie2"
        android:contentDescription="@string/logo" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rating_strs"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/stars" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:layout_marginTop="20dp"
        android:layout_marginStart="7dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/book"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/books" />

    <ImageView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/app_navigation"
        android:contentDescription="@string/bottom_sheet_behavior" />


</LinearLayout>
