<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BaseColor"
    >
    <ImageView
        style="@style/Header"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending_today"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/group_7"
        android:layout_gravity="right"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/books"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recently_released"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"/>

    <ImageView
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:background="@drawable/group_5"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/books"/>
    <ImageView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_navigation__2_"
        android:layout_gravity="center"
        android:contentDescription="@string/bottom_sheet_behavior" />

</LinearLayout>
